# handson-python

./: Makefile  README.md  hello_test.py  pyproject.toml
.github/workflows/: test.yml
