[tool.poetry]
name = "handson-python"
version = "0.1.0"
description = "handson for Python"
authors = ["ks6088ts <ks6088ts@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fire = "^0.4.0"
opencv-python = "^4.5.5"
opencv-contrib-python = "^4.5.5"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.950"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
mkdocs-material = "^8.2.15"

[tool.isort]
profile = "black"
include_trailing_comma = true
line_length = 120

[tool.black]
line-length = 120
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
)
'''

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
